solved contrast issue

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -2,7 +2,7 @@
 /*Especificidad (0,0,1)*/
 body {
     font-family: Verdana, Tahoma;
-    background-color: #96CEB4;
+    background-color: #CEE9DD;
     color: #180011;
 }
 /*Especificidad (0,0,1)*/
